--- a/mail-app/src/components/Components.css
+++ b/mail-app/src/components/Components.css
@@ -4,13 +4,13 @@
  }
  
  body {
-    font-size: 1em;
-    color: rgb(0, 0, 0);
+    font-size: 12px;
+    color: #3B3D3F;
  }
  
  h1 {
    font-size: 1.4em;
-   color: rgb(0, 0, 0);
+   color: #3B3D3F;
    position: relative;
    top: 8px;
    left: 16px;
@@ -48,8 +48,8 @@
     }
     
     li {
-      font: 200 1em/1.5 'Roboto', sans-serif;
-      color: rgb(197, 197, 197);
+      font: 200 1em/1.5 'Helvetica', sans-serif;
+      color: #EEF4F9;
       border-top: 1px solid #ccc;
       border-bottom: 1px solid #ccc;
     }
@@ -105,7 +105,7 @@
     left: 0;
     width: 100%;
     height: 4em;
-    background: #a4cbf0;
+    background: #EEF4F9;
  }
  
  .s-sidebar__trigger > i {
@@ -122,7 +122,7 @@
     transition: all .3s ease-in;
     width: 15em;
     height: 100%;
-    background: #ffffff;
+    background: #EEF4F9;
     color: rgba(0, 0, 0, 0.7);
     width: 250px;
     box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
@@ -165,7 +165,7 @@
  }
  
  .s-sidebar__nav-link:hover {
-    background: #d7ebff;
+    background: #EEF4F9;
  }
  
  .s-sidebar__nav-link > i {
